<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/action_forward_single"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:text="@string/forward_single_message"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:padding="5dp"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/action_forward_merge"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:text="@string/forward_merge_msg"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/action_forward_cancel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/txt_cancel"
        android:textSize="16sp" />

</LinearLayout>